--- a/microservice-config-product.yml
+++ b/microservice-config-product.yml
@@ -11,7 +11,7 @@ mybatis:
 spring:
   profiles: dev
   application:
-    name: microservice-product #这个很重要，这在以后的服务与服务之间相互调用一般都是根据这个name
+    name: microservice-product-config #这个很重要，这在以后的服务与服务之间相互调用一般都是根据这个name
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource            # 当前数据源操作类型
     driver-class-name: com.mysql.cj.jdbc.Driver             # mysql驱动包
@@ -30,7 +30,7 @@ eureka:
     fetchRegistry: true # 服务发现开关
     serviceUrl: # 注册到哪一个Eureka Server服务注册中心，多个中间用逗号分隔
       #defaultZone: http://localhost:6001/eureka
-      defaultZone: http://eureka6001.com:6001/eureka,http://eureka6002.com:6002/eureka
+      defaultZone: http://eureka6001.com:6001/eureka
   instance:
     instanceId: ${spring.application.name}:${server.port} # 等价于microservice-product:8001
     prefer-ip-addre ss: true #访问路径就会显示成IP地址
@@ -44,7 +44,7 @@ mybatis:
 spring:
   profiles: prod
   application:
-    name: microservice-product #这个很重要，这在以后的服务与服务之间相互调用一般都是根据这个name
+    name: microservice-product-config #这个很重要，这在以后的服务与服务之间相互调用一般都是根据这个name
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource            # 当前数据源操作类型
     driver-class-name: com.mysql.cj.jdbc.Driver             # mysql驱动包
@@ -63,7 +63,7 @@ eureka:
     fetchRegistry: true # 服务发现开关
     serviceUrl: # 注册到哪一个Eureka Server服务注册中心，多个中间用逗号分隔
       #defaultZone: http://localhost:6001/eureka
-      defaultZone: http://eureka6001.com:6001/eureka,http://eureka6002.com:6002/eureka
+      defaultZone: http://eureka6001.com:6001/eureka
   instance:
     instanceId: ${spring.application.name}:${server.port} # 等价于microservice-product:8001
     prefer-ip-addre ss: true #访问路径就会显示成IP地址
