--- a/microservice-config-product.yml
+++ b/microservice-config-product.yml
@@ -67,3 +67,6 @@ eureka:
   instance:
     instanceId: ${spring.application.name}:${server.port} # 等价于microservice-product:8001
     prefer-ip-address: true #访问路径就会显示成IP地址
+    
+emp:
+  name: zhangsan
