--- a/microservice-config-eureka.yml
+++ b/microservice-config-eureka.yml
@@ -11,12 +11,12 @@ spring:
 
 eureka:
   instance:
-    hostname: eureka6001.com 
+    hostname: 192.168.10.200 
   client:
     registerWithEureka: false 
     fetchRegistry: false  
     serviceUrl:    
-       defaultZone: http://eureka6001.com:6001/eureka/
+       defaultZone: http://${eureka.instance.hostname}:6001/eureka/
   server:
     enable-self-preservation: false
 ---
@@ -29,11 +29,11 @@ spring:
 
 eureka:
   instance:
-    hostname: eureka6001.com 
+    hostname: 192.168.10.200 
   client:
     registerWithEureka: false 
     fetchRegistry: false  
     serviceUrl:    
-       defaultZone: http://eureka6001.com:6001/eureka/
+       defaultZone: http://${eureka.instance.hostname}:6001/eureka/
   server:
     enable-self-preservation: true
