--- a/microservice-config-product.yml
+++ b/microservice-config-product.yml
@@ -15,9 +15,9 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource            # 当前数据源操作类型
     driver-class-name: com.mysql.cj.jdbc.Driver             # mysql驱动包
-    url: jdbc:mysql://192.168.10.136:3306/springcloud_db01?serverTimezone=GMT%2B8  # 数据库名称
+    url: jdbc:mysql://192.168.10.200:33306/springcloud_db01?serverTimezone=GMT%2B8  # 数据库名称
     username: root
-    password: Dnge.like7010
+    password: aaron
     dbcp2:
       min-idle: 5                                # 数据库连接池的最小维持连接数
       initial-size: 5                            # 初始化连接数
@@ -30,7 +30,7 @@ eureka:
     fetchRegistry: true # 服务发现开关
     serviceUrl: # 注册到哪一个Eureka Server服务注册中心，多个中间用逗号分隔
       #defaultZone: http://localhost:6001/eureka
-      defaultZone: http://eureka6001.com:6001/eureka
+      defaultZone: http://192.168.10.200:6001/eureka
   instance:
     instanceId: ${spring.application.name}:${server.port} # 等价于microservice-product:8001
     prefer-ip-address: true #访问路径就会显示成IP地址
@@ -48,9 +48,9 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource            # 当前数据源操作类型
     driver-class-name: com.mysql.cj.jdbc.Driver             # mysql驱动包
-    url: jdbc:mysql://192.168.10.136:3306/springcloud_db02?serverTimezone=GMT%2B8  # 数据库名称
+    url: jdbc:mysql://192.168.10.200:33306/springcloud_db02?serverTimezone=GMT%2B8  # 数据库名称
     username: root
-    password: Dnge.like7010
+    password: aaron
     dbcp2:
       min-idle: 5                                # 数据库连接池的最小维持连接数
       initial-size: 5                            # 初始化连接数
@@ -63,7 +63,7 @@ eureka:
     fetchRegistry: true # 服务发现开关
     serviceUrl: # 注册到哪一个Eureka Server服务注册中心，多个中间用逗号分隔
       #defaultZone: http://localhost:6001/eureka
-      defaultZone: http://eureka6001.com:6001/eureka
+      defaultZone: http://192.168.10.200:6001/eureka
   instance:
     instanceId: ${spring.application.name}:${server.port} # 等价于microservice-product:8001
     prefer-ip-address: true #访问路径就会显示成IP地址
